tests/test_assets/semantics/arrays/fail/initializer_types.cog
values: i32[3] = [1, true, 3];

flags: bool[2] = [true, 1];